# stocks-dashboard

./: .ci-trigger  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DEMO_VIDEO_SCRIPT.md  DOCKER_OPTIMIZATION.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  README.md  SCREENSHOTS.md  demo-screenshots.sh  demo_net_worth.py  flake.nix  generate-demo-materials.sh  justfile  renovate.json  take-screenshots.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
backend/: .dockerignore  .mypy.ini  Dockerfile  Dockerfile.dev  Dockerfile.prod  GEMINI.md  app.py  bloomberg-historical.py  fast_search.py  justfile  mypy.ini  probe_etoro.py  probe_etoro_v2.py  pyproject.toml  requirements.txt  ruff.toml  test.py  test_sma_fix.py  validate_sma_fix.py
backend/data/search/: top_cryptos.csv  top_indexes.csv
backend/historical-data/cleaned/: AAPL.csv  ACA.PA.csv  ACA.csv  AI.PA.csv  AIR.PA.csv  AIR.csv  AMD.csv  AMZN.csv  ASML.AS.csv  ASML.csv  AXP.csv  AZN.L.csv  BA-.L.csv  BA.csv  BAC.csv  BARC.L.csv  BAS.DE.csv  BAS.csv  BATS.L.csv  BAYN.DE.csv  BAYN.csv  BKNG.csv  BLK.csv  BN.PA.csv  BNP.PA.csv  BNP.csv  BP-.L.csv  BRK-B.csv  C.csv  CFT.csv  COST.csv  CRM.csv  CRWD.csv  CSCO.csv  DG.PA.csv  DIS.csv  DUOL.csv  ENGI.PA.csv  FICO.csv  GE.csv  (+64 more)
backend/notebooks/: bloomberg-historical.py  probe_etoro.py
backend/src/: app.py  auth.py  etoro_data.py  intervals.py  models.py  stocks.py  test_precommit.py  user.py
backend/src/database/: auth_repository.py  bloomberg_repository.py  stocks_repository.py
backend/src/endpoints/: auth.py  compare.py  stocks.py
backend/src/services/: auth_service.py  compare_to_index_service.py  etoro_data.py  intervals.py  search_cache.py  stocks_service.py  task_manager.py
backend/tests/: test_async_etoro.py  test_auth.py  test_backend.py  test_etoro_compare.py  test_load.py  test_search_cache.py  test_static_endpoints.py  test_stocks.py  test_task_manager.py
dev/: Caddyfile  (+4 more)
(+94 files in other folders)
