[project]
name = "finance_dashboard_api"
version = "1.0.0"
description = "Api for a simple finance dashboard"
dependencies = [
    "yfinance",
    "flask",
    "flask-openapi3[swagger,redoc,rapidoc]",
    "pydantic==2.11.2",
    "flask_cors",
    "openpyxl",
    "flask-caching>=2.3.1",
    "flask-login>=0.6.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
