[project]
name = "finance_dashboard_api"
version = "1.0.0"
description = "Api for a simple finance dashboard"
requires-python = ">=3.13"
dependencies = [
    "yfinance",
    "flask",
    "flask-openapi3[swagger,redoc,rapidoc]",
    "pydantic==2.11.2",
    "flask_cors",
    "openpyxl",
    "flask-caching>=2.3.1",
    "flask-login>=0.6.3",
    "pandas>=2.3.1",
    "google-genai>=1.28.0",
    "matplotlib>=3.10.5",
]

[dependency-groups]
dev = [
    "marimo>=0.14.16",
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.0.250703",
    "pyarrow>=21.0.0",
    "pylsp-mypy>=0.7.0",
    "python-lsp-server>=1.13.0",
    "ruff>=0.12.7",
    "types-flask-cors>=6.0.0.20250520",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "pytest-md-report>=0.7.0",
]

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
